import("//build/test.gni")
import("../musl_config.gni")

group("musl_libc_test") {
  testonly = true

  deps = [
    "src/api:main",
    "src/common:runtest",
    "src/functional:functional_test",
    "src/functionalext:functionalext_test",
    "src/math:math_test",
    "src/musl:pleval",
    "src/nativehook:nativehook_test",
    "src/regression:regression_test",
  ]

  if (use_gwp_asan) {
    deps += [ "src/gwp_asan:gwp_asan_test" ]
  }

  if (current_cpu == "arm") {
    deps += [ "src/eabi:eabi_test" ]
  }
}

group("libc_gtest") {
  testonly = true
  deps = [ "src/functionalext/supplement:musl_unittest" ]
}
