/*
 * Copyright (c) 2024 Huawei Device Co., Ltd.
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to
 * deal in the Software without restriction, including without limitation the
 * rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
 * sell copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
 * FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
 * IN THE SOFTWARE.
 */

import("//build/ohos.gni")
import("//build/test.gni")
import("../libc_unittest.gni")

group(unitTest_dynlink) {
    testonly = true
    deps = [
        ":dlopen_zip_test",
        ":dlopen_test",
        ":get_transparent_hugepages_supported_test",
        ":fill_random_data_test",
    ]
}

libc_ohos_unittest("get_transparent_hugepages_supported_test") {
    sources = [ "get_transparent_hugepages_supported_test.cpp" ]
}

libc_ohos_unittest("dlopen_zip_test") {
    sources = [ "dlopen_zip_test.cpp" ]
}

libc_ohos_unittest("fill_random_data_test") {
    sources = [ "fill_random_data_test.cpp" ]
}

libc_ohos_unittest("dlopen_test") {
    sources = [ "dlopen_test.cpp" ]
}